feat: 一旦レンダリング

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,5 +13,6 @@ import Bench from "@islands/Bench";
   <body>
     <h1>Astro</h1>
     <Bench client:only="react" />
+    <button id="button">Click to Start</button>
   </body>
 </html>
