--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,12 +8,12 @@ import Exhibition from "@islands/Exhibition";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>Lensia</title>
   </head>
   <body>
-    <div class="flex flex-col justify-center content-center h-screen relative">
-      <h1 class="text-center text-8xl font-bold">Pixly</h1>
-      <div class="flex-1">
+    <div class="flex flex-col justify-center content-center h-screen">
+      <h1 class="text-center text-8xl font-bold">Lensia</h1>
+      <div class="flex-1 relative">
         <Exhibition client:only="react" />
       </div>
     </div>
