--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Exhibition from "@islands/Exhibition";
+import Test from "@islands/Test";
 ---
 
 <html lang="en">
@@ -14,7 +15,8 @@ import Exhibition from "@islands/Exhibition";
     <div class="flex flex-col justify-center content-center h-screen">
       <!-- <h1 class="text-center text-8xl font-bold">Lensia</h1> -->
       <div class="flex-1 relative">
-        <Exhibition client:only="react" />
+        <!-- <Exhibition client:only="react" /> -->
+        <Test client:only="react" />
       </div>
     </div>
   </body>
