--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Exhibition from "@islands/Exhibition";
-import Test from "@islands/Test";
+// import Test from "@islands/Test";
 ---
 
 <html lang="en">
@@ -15,8 +15,8 @@ import Test from "@islands/Test";
     <div class="flex flex-col justify-center content-center h-screen">
       <!-- <h1 class="text-center text-8xl font-bold">Lensia</h1> -->
       <div class="flex-1 relative">
-        <!-- <Exhibition client:only="react" /> -->
-        <Test client:only="react" />
+        <Exhibition client:only="react" />
+        <!-- <Test client:only="react" /> -->
       </div>
     </div>
   </body>
